--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -38,5 +39,20 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^8.17.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.1",
+    "prettier": "^2.7.0"
+  },
+  "husky": {
+     "hooks": {
+       "pre-commit": "lint-staged"
+     }
+   },
+  "lint-staged": {
+    "*.{jsx,js}": "eslint --cache --fix",
+    "*.{jsx,html,sass,js,css,md}": "prettier --write"
   }
 }
